Replace newInstance() with getDeclaredConstructor().newInstance()